WIK-DPS-TP04/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: echodeploy
  namespace: ns-echo
spec:
  strategy:
    type: RollingUpdate
    maxUnavailable: 50%
  replicas: 4
  containers:
  - name: echoserver
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 8080
