WIK-DPS-TP04/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echoserv
  namespace: ns-echo
spec:
  containers:
  - name: echoserver
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 8080
