WIK-DPS-TP04/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoservice
  namespace: ns-echo
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  strategy:
    type: RollingUpdate
    maxUnavailable: 50%
  replicas: 4
  containers:
  - name: echoserver
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 8080
